== 0.4.0

* Documentation
  * Default database for windows is now set to pg instead of sqlite3
  * The default downloader type is now a Ruby program wrapped inside of an executable that uses Ruby Net class to incrementally download files
  * Peer-to-peer file downloader generation has been removed

* Bug Fix
  * Assets compression turned off since Windows currently fails on rake assets:precompile

== 0.3.0

* Enhancements
  * Update to Rails 3.1.1
  * Update authentication interface to use Contour 0.5.6

* Documentation
  * Added information on how to setup Elastic as a robust/reliable Windows 7 Service using Thin Server and Microsoft Resource Kit Tools

* Testing
  * Test suite updated to contain base set of passing test cases

== 0.2.0

* Enhancements
  * Switch to file serving via ruby script
  * Allow multiple locations for stored files, downloaders now require a folder location

== 0.1.0

* Initial implementation of torrents controller

== 0.0.0

* Initial version with user, authentications, menu, stylesheets, images, and javascript.