@@ -1,0 +1,1 @@
+$("#downloaders").html("<%= escape_javascript(render("downloaders")) %>");
