@@ -1,0 +1,1 @@
+$("#segments").html("<%= escape_javascript(render("segments")) %>");
