@@ -1,5 +1,8 @@
 == 0.4.0
 
+* Enhancements
+  * Pagination added to downloaders and segments index pages
+
 * Documentation
   * Default database for windows is now set to pg instead of sqlite3
   * The default downloader type is now a Ruby program wrapped inside of an executable that uses Ruby Net class to incrementally download files
